Facebook login button added.

--- a/BulletinBoardApp/BulletinBoard/BulletinBoard/Base.lproj/Main.storyboard
+++ b/BulletinBoardApp/BulletinBoard/BulletinBoard/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="fpk-Xv-EF3">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -575,50 +575,74 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Be-jE-pFN">
-                                <rect key="frame" x="180" y="28" width="240" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Be-jE-pFN">
+                                <rect key="frame" x="20" y="28" width="560" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="O1x-jv-WQN"/>
+                                </constraints>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OXk-Yl-isE">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OXk-Yl-isE">
                                 <rect key="frame" x="191" y="216" width="219" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="219" id="ZDL-Zg-fE6"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4RN-N1-O5e">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4RN-N1-O5e">
                                 <rect key="frame" x="191" y="261" width="219" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1AQ-2y-z1C">
-                                <rect key="frame" x="104" y="220" width="79" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1AQ-2y-z1C">
+                                <rect key="frame" x="104" y="219" width="79" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H9z-JV-en1">
-                                <rect key="frame" x="109" y="265" width="74" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H9z-JV-en1">
+                                <rect key="frame" x="109" y="264" width="74" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DCM-B3-Liv">
-                                <rect key="frame" x="195" y="316" width="38" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DCM-B3-Liv">
+                                <rect key="frame" x="191" y="316" width="38" height="30"/>
                                 <state key="normal" title="Login"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6bk-QX-aLl">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6bk-QX-aLl">
                                 <rect key="frame" x="353" y="316" width="57" height="30"/>
                                 <state key="normal" title="Register"/>
                             </button>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d7z-oR-PcO">
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d7z-oR-PcO">
                                 <rect key="frame" x="180" y="383" width="240" height="54"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yri-w1-3Zd">
-                                <rect key="frame" x="180" y="452" width="240" height="54"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DCM-B3-Liv" firstAttribute="leading" secondItem="4RN-N1-O5e" secondAttribute="leading" id="1XS-Hq-xkR"/>
+                            <constraint firstItem="6bk-QX-aLl" firstAttribute="top" secondItem="4RN-N1-O5e" secondAttribute="bottom" constant="25" id="2kc-mK-rY9"/>
+                            <constraint firstItem="OXk-Yl-isE" firstAttribute="centerX" secondItem="FYW-Dj-FH0" secondAttribute="centerX" id="3eG-96-Vru"/>
+                            <constraint firstItem="4RN-N1-O5e" firstAttribute="centerX" secondItem="FYW-Dj-FH0" secondAttribute="centerX" id="B60-Er-JQI"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="8Be-jE-pFN" secondAttribute="trailing" id="EUI-lh-6hu"/>
+                            <constraint firstItem="6bk-QX-aLl" firstAttribute="trailing" secondItem="4RN-N1-O5e" secondAttribute="trailing" id="JQq-Vm-oAX"/>
+                            <constraint firstItem="1AQ-2y-z1C" firstAttribute="baseline" secondItem="OXk-Yl-isE" secondAttribute="baseline" id="KDu-qM-Ubz"/>
+                            <constraint firstItem="OXk-Yl-isE" firstAttribute="leading" secondItem="1AQ-2y-z1C" secondAttribute="trailing" constant="8" id="NhK-ji-o7q"/>
+                            <constraint firstItem="4RN-N1-O5e" firstAttribute="width" secondItem="OXk-Yl-isE" secondAttribute="width" id="OPw-ct-XfL"/>
+                            <constraint firstItem="8Be-jE-pFN" firstAttribute="top" secondItem="6cM-dJ-T19" secondAttribute="bottom" constant="8" id="PPg-9S-PEx"/>
+                            <constraint firstItem="4RN-N1-O5e" firstAttribute="leading" secondItem="H9z-JV-en1" secondAttribute="trailing" constant="8" id="WHb-HP-BM2"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="8Be-jE-pFN" secondAttribute="leading" id="hCb-sV-sel"/>
+                            <constraint firstItem="d7z-oR-PcO" firstAttribute="centerX" secondItem="FYW-Dj-FH0" secondAttribute="centerX" id="nCg-U6-vuF"/>
+                            <constraint firstItem="DCM-B3-Liv" firstAttribute="top" secondItem="4RN-N1-O5e" secondAttribute="bottom" constant="25" id="paW-iE-cCi"/>
+                            <constraint firstItem="4RN-N1-O5e" firstAttribute="top" secondItem="OXk-Yl-isE" secondAttribute="bottom" constant="15" id="wRx-Bk-49D"/>
+                            <constraint firstItem="H9z-JV-en1" firstAttribute="baseline" secondItem="4RN-N1-O5e" secondAttribute="baseline" id="wcd-me-RJM"/>
+                            <constraint firstItem="OXk-Yl-isE" firstAttribute="top" secondItem="8Be-jE-pFN" secondAttribute="bottom" constant="60" id="yET-wU-rub"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="loginButtonContainer" destination="d7z-oR-PcO" id="XSe-JM-f11"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oNT-24-8Zz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
